--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sobre Josu&eacute; Tonelli Cueto</title>
+    <title>Sobre Josué Tonelli Cueto</title>
     <meta name="description" content="Intereses de investigación y lista de publicaciones de Josué Tonelli Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -113,12 +113,12 @@
   </p>
   <h3>Genealogía matemática</h3>
   <p>Puedes investigar mes ancestres y familiares matemátiques académiques en el Math Genealogy Project.</p>
-  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a> <a class="btn btn-MGP" href="pdf/mathgenealogy_tonellicueto.pdf" role="button">Poster de mi genealog&iacute;a acad&eacute;mica</a></p>
+  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a> <a class="btn btn-MGP" href="pdf/mathgenealogy_tonellicueto.pdf" role="button">Poster de mi genealog&iacute;a académica</a></p>
 </div>
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
