--- a/arXiv.html
+++ b/arXiv.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>arXiv Preprints of Josu&eacute; Tonelli-Cueto</title>
+    <title>arXiv Preprints of Josué Tonelli-Cueto</title>
     <meta name="description" content="Complete list of the arXiv preprints of papers (co)authored by Josué Tonelli-Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -123,7 +123,7 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h2 class="display-4">arXiv Preprints of Josu&eacute; Tonelli-Cueto</h2>
+        <h2 class="display-4">arXiv Preprints of Josué Tonelli-Cueto</h2>
         </center>
      </div>
 </div>
@@ -137,7 +137,7 @@ This list is powered by my <a href="https://arxiv.org/a/tonellicueto_j_1.html">a
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
