--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate"/>
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Preprints de Josu&eacute; Tonelli-Cueto en arXiv</title>
+    <title>Preprints de Josué Tonelli-Cueto en arXiv</title>
     <meta name="description" content="Lista completa de preprints de artículos científicos (co)escritos por Josué Tonelli-Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -124,8 +124,8 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h2 class="display-4">Preprints de Josu&eacute; Tonelli-Cueto en arXiv</h2>
-        (Lista en ingl&eacute;s)
+        <h2 class="display-4">Preprints de Josué Tonelli-Cueto en arXiv</h2>
+        (Lista en inglés)
         </center>
      </div>
 </div>
@@ -138,7 +138,7 @@ Esta lista ha sido producida gracias a mi <a href="https://arxiv.org/a/tonellicu
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;">C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
