--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josu&eacute; Tonelli-Cueto's Contact Information</title>
+    <title>Josué Tonelli-Cueto's Contact Information</title>
     <meta name="description" content="Work adress, e-mail and other profiles in the web of Josué Tonelli-Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -74,12 +74,12 @@
   <div class="col-md-4" style="padding-top:1em;">
 <h3>&ensp;</h3><p></p>
     <center>
-<img src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto somewhere in Venice" style="width:94%;">
+<img src="imgs/contact2.jpg" alt="Josué Tonelli-Cueto somewhere in Venice" style="width:94%;">
    </center>
 <p align="center" style="font-size:x-small;">In front of a gold leafed wall in Venezia.</p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
-     <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
+     <h3>Dr. Josué Tonelli-Cueto</h3>
 <p></p>
      <p style="text-align:left;">
 <b>Institut de Mathematiques de Jussieu<br/> - Paris Rive Gauche</b><br/>
@@ -126,7 +126,7 @@ TOBEUPDATED (phone)
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
