--- a/contact_es.html
+++ b/contact_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Informaci&oacute;n de contacto de Josu&eacute; Tonelli Cueto</title>
+    <title>Informaci&oacute;n de contacto de Josué Tonelli Cueto</title>
     <meta name="description" content="Dirección en el trabajo, e-mail y perfiles en la web de Josué Tonelli-Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -74,12 +74,12 @@
   <div class="col-md-4" style="padding-top:1em;">
 <h3>&ensp;</h3><p></p>
     <center>
-<img src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli Cueto en alg&uacute;n lugar de Venezia" style="width:94%;">
+<img src="imgs/contact2.jpg" alt="Josué Tonelli Cueto en alg&uacute;n lugar de Venezia" style="width:94%;">
    </center>
 <p align="center" style="font-size:x-small;">Delante de un muro cubierto de pan de oro en Venezia.</p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
-     <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
+     <h3>Dr. Josué Tonelli Cueto</h3>
 <p></p>
      <p style="text-align:left;">
        <b>Institut de Mathematiques de Jussieu<br/> - Paris Rive Gauche</b><br/>
@@ -96,7 +96,7 @@ Habitaci&oacute;n 15-16.414
 <p align="left" id="obf"></p>
 
 <p align="left">
-TOBEUPDATED (tel&eacute;fono)
+TOBEUPDATED (teléfono)
 </p>
 
      <!--<p align="left">
@@ -125,7 +125,7 @@ TOBEUPDATED (tel&eacute;fono)
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;">C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
