--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josu&eacute; Tonelli-Cueto's Personal Webpage</title>
+    <title>Josué Tonelli-Cueto's Personal Webpage</title>
     <meta name="description" content="Research, interests and more information about Josué Tonelli-Cueto" />
     <meta name="yandex-verification" content="98b48e414f9389e0" />
     <!--  Bootstrap core CSS  -->
@@ -90,11 +90,11 @@
 <div class="jumbotron" style="margin-bottom: 0px;">
  <div class="row" style="display: flex;">
   <div class="col-md-5" align="center">
-        <a href="imgs/josue_tonellicueto_index.JPG"><img itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at the TU Berlin"/></a>
+        <a href="imgs/josue_tonellicueto_index.JPG"><img itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Picture of Josué Tonelli-Cueto at the TU Berlin"/></a>
   </div>
   <div class="col-md-7">
         <center>
-        <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
+        <h1>Josué Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
         <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">FSMP Postdoctoral Fellow</a> at the <a href="https://team.inria.fr/ouragan/">OURAGAN team</a><br/>in <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> and <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
         <!--<h3><a href=""></a></h3>-->
@@ -125,7 +125,7 @@
 </div>
 
 <footer style="padding-top:1em;">
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
