--- a/index_es.html
+++ b/index_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Página personal de Josu&eacute; Tonelli Cueto</title>
+    <title>Página personal de Josué Tonelli Cueto</title>
     <meta name="description" content="Investigación, intereses y más información sobre Josué Tonelli Cueto" />
 
     <!--  Bootstrap core CSS  -->
@@ -90,11 +90,11 @@
     <div class="jumbotron" style="margin-bottom: 0px;">
      <div class="row" style="display: flex;">
       <div class="col-md-5" align="center">
-            <a href="imgs/josue_tonellicueto_index.JPG"><img itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Fotografía de Josu&eacute; Tonelli Cueto en la TU Berlin"/></a>
+            <a href="imgs/josue_tonellicueto_index.JPG"><img itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Fotografía de Josué Tonelli Cueto en la TU Berlin"/></a>
       </div>
       <div class="col-md-7">
         <center>
-        <h1>Josu&eacute; Tonelli Cueto</h1>
+        <h1>Josué Tonelli Cueto</h1>
         <h2>Matemático</h2>
         <h3><a href="https://www.sciencesmaths-paris.fr/en/post-doctoral-laureats-298.htm">Reclutado Postdoctoral de la FSMP</a> en el <a href="https://team.inria.fr/ouragan/">equipo OURAGAN</a><br/>en <a href="https://www.inria.fr/fr/centre-inria-de-paris">Inria Paris</a> e <a href="https://www.imj-prg.fr/">IMJ-PRG</a></h3>
         <!--<h3><a href=""></a></h3>-->
@@ -125,7 +125,7 @@
 </div>
 
 <footer style="padding-top:1em;">
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
