--- a/multimedia.html
+++ b/multimedia.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josu&eacute; Tonelli-Cueto's Multimedia</title>
+    <title>Josué Tonelli-Cueto's Multimedia</title>
     <meta name="description" content="Designs and images created by or of Josué Tonelli-Cueto" />
 
     <!--  Bootstrap core CSS  -->
@@ -247,7 +247,7 @@
   <div class="row" style="display:flex;align-items: center;">
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto somewhere in Venezia"/>
+      <img style="width:90%;" src="imgs/contact2.jpg" alt="Josué Tonelli-Cueto somewhere in Venezia"/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2021 Evgenia Lagoda)</p>
       <p style="margin:0;text-align:center;padding-top:0em;">Venezia, July 2021</p>
       <p style="text-align:justify;font-size:small;">In front of a gold leafed wall.</p>
@@ -307,7 +307,7 @@
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <a href="https://www.instagram.com/p/BvYhw99gQo7/"><img style="width:90%;" src="imgs/contact.jpg" alt="Josu&eacute; Tonelli-Cueto in front of old postboxes in the Hong Kong Museum of History"/></a>
+     <a href="https://www.instagram.com/p/BvYhw99gQo7/"><img style="width:90%;" src="imgs/contact.jpg" alt="Josué Tonelli-Cueto in front of old postboxes in the Hong Kong Museum of History"/></a>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Hong Kong, March 2019</p>
      <p style="text-align:justify;font-size:small;">In front of old postboxes in the <a href="https://hk.history.museum/" style="font-size:1em">Hong Kong Museum of History</a>.</p>
@@ -499,7 +499,7 @@
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
