--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Multimedia de Josu&eacute; Tonelli Cueto</title>
+    <title>Multimedia de Josué Tonelli Cueto</title>
     <meta name="description" content="Diseños e imagénes creadas por o de Josué Tonelli Cueto" />
 
     <!--  Bootstrap core CSS  -->
@@ -249,7 +249,7 @@
 
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto en algún lugar de Venezia"/>
+      <img style="width:90%;" src="imgs/contact2.jpg" alt="Josué Tonelli-Cueto en algún lugar de Venezia"/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2021 Evgenia Lagoda)</p>
       <p style="margin:0;text-align:center;padding-top:0em;">Venezia, julio de 2021</p>
       <p style="text-align:justify;font-size:small;">Delante de un muro cubierto de pan de oro.</p>
@@ -310,7 +310,7 @@
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <a href="https://www.instagram.com/p/BvYhw99gQo7/"><img style="width:90%;" src="imgs/contact.jpg" alt="Josu&eacute; Tonelli Cueto enfrente de buzones antiguos en el Hong Kong Museum of History"/></a>
+     <a href="https://www.instagram.com/p/BvYhw99gQo7/"><img style="width:90%;" src="imgs/contact.jpg" alt="Josué Tonelli Cueto enfrente de buzones antiguos en el Hong Kong Museum of History"/></a>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Hong Kong, March 2019</p>
      <p style="text-align:justify;font-size:small;">Delante de unos buzones antiguos en el <a href="https://hk.history.museum/" style="font-size:1em">Hong Kong Museum of History</a>.</p>
@@ -500,7 +500,7 @@
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
