--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josu&eacute; Tonelli-Cueto's Research</title>
+    <title>Josué Tonelli-Cueto's Research</title>
     <meta name="description" content="Research interests and list of publications of Josué Tonelli-Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -82,7 +82,7 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h2 class="display-4">Research</h2>of<h2 class="display-4">Josu&eacute; Tonelli-Cueto</h2>
+        <h2 class="display-4">Research</h2>of<h2 class="display-4">Josué Tonelli-Cueto</h2>
         </center>
      </div>
 </div>
@@ -214,7 +214,7 @@
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
