--- a/research_es.html
+++ b/research_es.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Investigación de Josu&eacute; Tonelli Cueto</title>
+    <title>Investigación de Josué Tonelli Cueto</title>
     <meta name="description" content="Intereses de investigación y lista de publicaciones de Josué Tonelli Cueto" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -83,7 +83,7 @@
 <div class="jumbotron">
       <div class="container">
         <center>
-        <h2 class="display-4">Investigación</h2>de<h2 class="display-4">Josu&eacute; Tonelli Cueto</h2>
+        <h2 class="display-4">Investigación</h2>de<h2 class="display-4">Josué Tonelli Cueto</h2>
         </center>
      </div>
 </div>
@@ -215,7 +215,7 @@
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
