--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,14 @@
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Josué Tonelli-Cueto</title>
-    <meta name="description" content="Research interests and list of publications of Josué Tonelli-Cueto" />
+    <meta name="description" content="Biography and self-description of Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/aboutme.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: About me" /><!--35char-->
+    <meta property="og:description" content="Biography and self-description"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM1.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
