--- a/arXiv.html
+++ b/arXiv.html
@@ -6,8 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>arXiv Preprints of Josué Tonelli-Cueto</title>
-    <meta name="description" content="Complete list of the arXiv preprints of papers (co)authored by Josué Tonelli-Cueto" />
+    <title>Josué Tonelli-Cueto: arXiv preprints</title>
+    <meta name="description" content="Complete list of the arXiv preprints (co)authored by Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/arXiv.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: arXiv papers" /><!--35char-->
+    <meta property="og:description" content="Complete list of arXiv papers"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
