--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -6,8 +6,15 @@
     <meta name="google" content="notranslate"/>
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Preprints de Josué Tonelli-Cueto en arXiv</title>
-    <meta name="description" content="Lista completa de preprints de artículos científicos (co)escritos por Josué Tonelli-Cueto" />
+    <title>Josué Tonelli Cueto: arXiv preprints</title>
+    <meta name="description" content="Lista completa de preprints (co)escritos por Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://tonellicueto.xyz/arXiv_es.html" />
+    <meta property="og:title" content="Josué Tonelli Cueto: arXiv papers" /><!--35char-->
+    <meta property="og:description" content="Lista completa de arXiv papers"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
