--- a/contact_es.html
+++ b/contact_es.html
@@ -6,8 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Informaci&oacute;n de contacto de Josué Tonelli Cueto</title>
+    <title>Josué Tonelli Cueto: Información de contacto</title>
     <meta name="description" content="Dirección en el trabajo, e-mail y perfiles en la web de Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://tonellicueto.xyz/contact_es.html" />
+    <meta property="og:title" content="Josué Tonelli Cueto: Contacto" /><!--35char-->
+    <meta property="og:description" content="Información de contacto y redes sociales"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM3.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
