--- a/cv.html
+++ b/cv.html
@@ -6,9 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's Curriculum Vitae</title>
+    <title>Josué Tonelli-Cueto: Curriculum Vitae</title>
     <meta name="description" content="Curriculum Vitae of Josué Tonelli-Cueto in several formats" />
-
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/cv.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: CV" /><!--35char-->
+    <meta property="og:description" content="Complete academic curriculum vitae"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
