--- a/cv_es.html
+++ b/cv_es.html
@@ -6,9 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Currículum Vitae de Josué Tonelli Cueto</title>
+    <title>Josué Tonelli Cueto: Currículum Vitae</title>
     <meta name="Descripción" content="Currículum Vitae de Josué Tonelli Cueto en varios formatos" />
-
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://tonellicueto.xyz/cv_es.html" />
+    <meta property="og:title" content="Josué Tonelli Cueto: CV" /><!--35char-->
+    <meta property="og:description" content="Currículum vitae académico completo"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
