--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's Personal Webpage</title>
+    <title>Josué Tonelli-Cueto: Personal Website</title>
     <meta name="description" content="Research, interests and more information about Josué Tonelli-Cueto" />
     <meta name="yandex-verification" content="98b48e414f9389e0" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: Website" /><!--35char-->
+    <meta property="og:description" content="Personal website of Josué Tonelli-Cueto"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
