--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -6,9 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Multimedia de Josué Tonelli Cueto</title>
-    <meta name="description" content="Diseños e imagénes creadas por o de Josué Tonelli Cueto" />
-
+    <title>Josué Tonelli Cueto: Multimedia</title>
+    <meta name="description" content="Diseños, imagénes y vídeos creadas por o de Josué Tonelli Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://tonellicueto.xyz/multimedia_es.html" />
+    <meta property="og:title" content="Josué Tonelli Cueto: Multimedia" /><!--35char-->
+    <meta property="og:description" content="Diseños, imagénes y vídeos"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
