--- a/non-research.html
+++ b/non-research.html
@@ -6,8 +6,16 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's Non-Research</title>
-    <meta name="description" content="Teaching and other activities of Josué Tonelli-Cueto" />
+    <title>Josué Tonelli-Cueto: Non-research</title>
+    <meta name="description" content="Teaching, popularization (of math) and other activities of Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/non-research.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: Non-research" /><!--35char-->
+    <meta property="og:description" content="Teaching, popularization (of math) and non-academic texts"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
