--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -7,7 +7,14 @@
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sobre Josué Tonelli Cueto</title>
-    <meta name="description" content="Intereses de investigación y lista de publicaciones de Josué Tonelli Cueto" />
+    <meta name="description" content="Biografía y auto-descripción de Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://tonellicueto.xyz/aboutme_es.html" />
+    <meta property="og:title" content="Josué Tonelli Cueto: Sobre mi" /><!--35char-->
+    <meta property="og:description" content="Biografía y auto-descripción"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM1.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
