--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,16 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's Contact Information</title>
+    <title>Josue Tonelli-Cueto's Contact Information</title>
     <meta name="description" content="Work adress, e-mail and other profiles in the web of Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/contact.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: Contact" /><!--35char-->
+    <meta property="og:description" content="Contact information and social media"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM3.png"><!--300KB and minimum dimensions of 300 x 200-->
+
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
