--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -6,8 +6,16 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's doctoral thesis</title>
+    <title>Josué Tonelli-Cueto: doctoral thesis</title>
     <meta name="description" content="Information about the doctoral thesis and defense of Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/doctoralthesis.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: PhD Thesis" /><!--35char-->
+    <meta property="og:description" content="Doctoral thesis: text, defence and more"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM2.png"><!--300KB and minimum dimensions of 300 x 200-->
+
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
