--- a/index_es.html
+++ b/index_es.html
@@ -6,9 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Página personal de Josué Tonelli Cueto</title>
+    <title>Josué Tonelli Cueto: Página personal</title>
     <meta name="description" content="Investigación, intereses y más información sobre Josué Tonelli Cueto" />
-
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:url" content="https://tonellicueto.xyz/index_es.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: Página web" /><!--35char-->
+    <meta property="og:description" content="Página web personal de Josué Tonelli-Cueto"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
