--- a/multimedia.html
+++ b/multimedia.html
@@ -6,9 +6,15 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's Multimedia</title>
-    <meta name="description" content="Designs and images created by or of Josué Tonelli-Cueto" />
-
+    <title>Josué Tonelli-Cueto: Multimedia</title>
+    <meta name="description" content="Designs, images and videos created by or of Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/multimedia.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: Multimedia" /><!--35char-->
+    <meta property="og:description" content="Designs, images and videos"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
