--- a/research.html
+++ b/research.html
@@ -6,8 +6,16 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto's Research</title>
+    <title>Josué Tonelli-Cueto: Research</title>
     <meta name="description" content="Research interests and list of publications of Josué Tonelli-Cueto" />
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:url" content="https://tonellicueto.xyz/research.html" />
+    <meta property="og:title" content="Josué Tonelli-Cueto: Research" /><!--35char-->
+    <meta property="og:description" content="Research interests and academic publications"><!--65char-->
+    <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
