Twitter metadata for some pages: index, CV and PhD thesis

--- a/arXiv.html
+++ b/arXiv.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josué Tonelli-Cueto: arXiv preprints</title>
     <meta name="description" content="Complete list of the arXiv preprints (co)authored by Josué Tonelli-Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
