--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Josué Tonelli-Cueto</title>
     <meta name="description" content="Biography and self-description of Josué Tonelli-Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
