--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josue Tonelli-Cueto's Contact Information</title>
     <meta name="description" content="Work adress, e-mail and other profiles in the web of Josué Tonelli-Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
