--- a/contact_es.html
+++ b/contact_es.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josué Tonelli Cueto: Información de contacto</title>
     <meta name="description" content="Dirección en el trabajo, e-mail y perfiles en la web de Josué Tonelli-Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
