--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josué Tonelli-Cueto: Curriculum Vitae</title>
     <meta name="description" content="Curriculum Vitae of Josué Tonelli-Cueto in several formats" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
@@ -15,6 +16,13 @@
     <meta property="og:title" content="Josué Tonelli-Cueto: CV" /><!--35char-->
     <meta property="og:description" content="Complete academic curriculum vitae"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Academic Curriculum Vitae" />
+    <meta name="twitter:description" content="Complete academic curriculum vitae of Josué Tonelli-Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_index.JPG" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
