--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josué Tonelli-Cueto: doctoral thesis</title>
     <meta name="description" content="Information about the doctoral thesis and defense of Josué Tonelli-Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
@@ -15,7 +16,13 @@
     <meta property="og:title" content="Josué Tonelli-Cueto: PhD Thesis" /><!--35char-->
     <meta property="og:description" content="Doctoral thesis: text, defence and more"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM2.png"><!--300KB and minimum dimensions of 300 x 200-->
-
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Doctoral Thesis" />
+    <meta name="twitter:description" content="Josué Tonelli-Cueto defended his doctoral thesis «Condition and Homology in Semialgebraic Geometry» at the Technische Universität Berlin in 2019" />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/thesis/coverthesis_tonellicueto.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
