--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -6,15 +6,23 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto: Tesis doctoral</title>
+    <title>Josué Tonelli Cueto: Tesis doctoral</title>
     <meta name="description" content="Información sobre la tesis y defensa doctorales de Josué Tonelli Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:url" content="https://tonellicueto.xyz/doctoralthesis_es.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: Tesis Doc." /><!--35char-->
+    <meta property="og:title" content="Josué Tonelli Cueto: Tesis Doc." /><!--35char-->
     <meta property="og:description" content="Tesis doctoral: texto, defensa y más"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM2.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Tesis doctoral" />
+    <meta name="twitter:description" content="Josué Tonelli-Cueto defenció su tesis doctoral «Condition and Homology in Semialgebraic Geometry» en la Technische Universität Berlin en 2019" />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/thesis/coverthesis_tonellicueto.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
