--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Josué Tonelli-Cueto: Personal Website</title>
     <meta name="description" content="Research, interests and more information about Josué Tonelli-Cueto" />
     <meta name="yandex-verification" content="98b48e414f9389e0" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
@@ -16,6 +17,13 @@
     <meta property="og:title" content="Josué Tonelli-Cueto: Website" /><!--35char-->
     <meta property="og:description" content="Personal website of Josué Tonelli-Cueto"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Personal Website" />
+    <meta name="twitter:description" content="This website contain the research, interests and more information about Josué Tonelli-Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_index.JPG" />
 
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
