--- a/index_es.html
+++ b/index_es.html
@@ -6,8 +6,9 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli Cueto: Página personal</title>
+    <title>Josué Tonelli Cueto: Página web personal</title>
     <meta name="description" content="Investigación, intereses y más información sobre Josué Tonelli Cueto" />
+    <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
@@ -15,6 +16,13 @@
     <meta property="og:title" content="Josué Tonelli-Cueto: Página web" /><!--35char-->
     <meta property="og:description" content="Página web personal de Josué Tonelli-Cueto"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
+    <!--Twitter metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tonellicueto" />
+    <meta name="twitter:creator" content="@tonellicueto" />
+    <meta name="twitter:title" content="Josué Tonelli-Cueto: Página web personal" />
+    <meta name="twitter:description" content="Esta página web contiene la investigación, intereses y más información sobre Josué Tonelli Cueto." />
+    <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_index.JPG" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
