--- a/aboutme.html
+++ b/aboutme.html
@@ -39,6 +39,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="blog/">Blog</a>
+          </li>
+
 	  <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
