--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -92,6 +92,10 @@
             <a class="nav-link" href="index_es.html">Inicio</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="blog/">Blog</a>
+          </li>
+
 	  <li class="nav-item">
             <a class="nav-link" href="research_es.html">Investigaci&oacute;n</a>
           </li>
