--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -59,6 +59,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="blog/">Blog</a>
+          </li>
+
 	  <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
