--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="blog/">Blog</a>
+          </li>
+
 	  <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
           </li>
