--- a/research.html
+++ b/research.html
@@ -41,6 +41,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="blog/">Blog</a>
+          </li>
+
 	  <li class="nav-item active">
             <a class="nav-link" href="research.html">Research</a>
           </li>
