--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
           <div class="col">
             <a class="btn btn-phd" href="doctoralthesis.html" role="button" style="width:55%;">Doctoral thesis</a>
           </div>
+          <div class="col">
+            <a class="btn btn-secondary" href="blog/" role="button" style="width:80%;">Blog</a>
+          </div>
       </div>
       <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
           <div class="col">
