--- a/index_es.html
+++ b/index_es.html
@@ -121,6 +121,9 @@
           <div class="col">
             <a class="btn btn-phd" href="doctoralthesis_es.html" role="button" style="width:55%;">Tesis doctoral</a>
           </div>
+          <div class="col">
+            <a class="btn btn-secondary" href="blog/" role="button" style="width:80%;">Blog</a>
+          </div>
       </div>
       <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
           <div class="col">
