--- a/contact.html
+++ b/contact.html
@@ -132,6 +132,8 @@ TOBEUPDATED (phone)
 <a href="https://www.instagram.com/tonellicueto/" class="fa fa-instagram"></a>&ensp;<a href="https://www.instagram.com/tonellicueto/" style="color:#FF69B4;font-variant:normal;font-style:normal;font-size: 1em;">@tonellicueto</a>
 <br/>
 <a href="https://twitter.com/tonellicueto" class="fa fa-twitter"></a>&ensp;<a href="https://twitter.com/tonellicueto" style="color:#55ACEE;font-variant:normal;font-style:normal;font-size: 1em;">@tonellicueto</a>
+<br/>
+<a href="blog/" class="fa fa-bold"></a>&ensp;<a href="blog/" style="color:#ee2523;font-variant:small-caps;font-style:normal;font-size: 1em;">Ill-posed thoughts</a>
 
   </div>
  </div>
