--- a/index_es.html
+++ b/index_es.html
@@ -188,7 +188,7 @@
      x[2].style="font-size:1em;padding-top:5vw;";
      x[3].style="font-size:1em;padding-top:5vw;";
     x = document.getElementsByClassName("btn btn-phd");
-     x[0].style="width:80%;";
+     x[0].innerHTML="Tesis doc.";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
