--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
      x[2].style="font-size:1em;padding-top:5vw;";
      x[3].style="font-size:1em;padding-top:5vw;";
     x = document.getElementsByClassName("btn btn-phd");
-     x[0].style="width:80%;";
+     x[0].innerHTML="Doc. thesis";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
