dead link correction

--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -118,7 +118,7 @@
   </h1>
   </center>
   <hr>
-  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></p>
+  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
@@ -330,7 +330,7 @@
   <em>3rd Prize</em> in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>
   </h3>
   <p>
-  The thesis obtained the <em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>. The jury's decision on the prize can be seen at <span><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">this link</a></span>. The thesis was nominated for the prize by Peter Bürgisser.
+  The thesis obtained the <em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em>. The jury's decision on the prize can be seen at <span><a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">this link</a></span>. The thesis was nominated for the prize by Peter Bürgisser.
   </p>
   <p>
   The <a href="https://web.archive.org/web/20210128001846/https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius Prizes of the Berlin Universities</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, in German)</a> are awarded each year by the <a href="https://www.lkrp-berlin.de/index.html">State Conference of Rectors and Presidents of Berlin Universities (LKRP)</a>. They consist on three prizes (1st, 2nd, and 3rd) and three recognition awards for doctoral theses defended the previous year at one of the Berlin universities, and on three prizes (1st, 2nd, and 3rd) for Master theses presented the previous year at one of the Berlin <a href="https://en.wikipedia.org/wiki/Fachhochschule">Fachhochschules (universities of applied sciences)</a>. To be considered for the Tiburtius Prizes, the thesis must have the highest possible grade and it should be nominated by one of the professors at the Berlin universities.
@@ -385,7 +385,7 @@
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
       document.getElementById("finalsentence").innerHTML="";
-      document.getElementById("tiburtius").innerHTML='<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em><br/>in the<br/><em>Tiburtius Prizes 2020<br/>of the<br/>Berlin Universities</em></a>';
+      document.getElementById("tiburtius").innerHTML='<a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em><br/>in the<br/><em>Tiburtius Prizes 2020<br/>of the<br/>Berlin Universities</em></a>';
       document.getElementById("botonfotosB").style="width:100%;font-size:1em;";
     }
     //-->
