--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -122,7 +122,7 @@
   </p>
   </center>
   <hr>
-  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a></p>
+  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
@@ -333,7 +333,7 @@
   <em>3º Premio</em> en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>
   </h3>
   <p>
-  Esta tesis obtuvo el <em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>. El fallo del premio puede leerse en <span><a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">este enlace</a></span>. La tesis fue nominada al premio por Peter Bürgisser.
+  Esta tesis obtuvo el <em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>. El fallo del premio puede leerse en <span><a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf">este enlace</a></span>. La tesis fue nominada al premio por Peter Bürgisser.
   </p>
   <p>
   Los <a href="https://web.archive.org/web/20210128001846/https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Premios Tiburtius de las Universidades de Berlín</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, en alemán)</a> son otorgados cada año por la <a href="https://www.lkrp-berlin.de/index.html">Conferencia Estatal de Rectores y Presidentes de las Universidades de Berlín (LKRP)</a>. Estos premios consisten en tres premios (1º, 2º y 3º) y tres accésits para tesis doctorales defendidas el año anterior en una de las universidades de Berlín, y en tres premios (1º, 2º y 3º) para tesis de Máster presentadas el año anterior en una de las <a href="https://es.wikipedia.org/wiki/Fachhochschule">Fachhochschules (universidades de ciencias aplicadas)</a> de Berlín. Para ser considarada para los Premios Tiburtius, la tesis ha debido obtener la nota más alta y debe ser nominada por uno de les profesores de las universidades de Berlín.
@@ -388,7 +388,7 @@
       x = document.getElementsByTagName("pre");
       x[0].style="font-size:0.5em;";
     document.getElementById("finalsentence").innerHTML="";
-    document.getElementById("tiburtius").innerHTML='<a href="https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em><br/>en los<br/><em>Premios Tiburtius 2020<br/>de las<br/> Universidades de Berlín</em></a>';
+    document.getElementById("tiburtius").innerHTML='<a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em><br/>en los<br/><em>Premios Tiburtius 2020<br/>de las<br/> Universidades de Berlín</em></a>';
     document.getElementById("botonfotosB").style="width:100%;font-size:1em;";
     }
     //-->
