--- a/cv.html
+++ b/cv.html
@@ -567,14 +567,14 @@
 
          <br/><div class="cv">
          <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
-           <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
+           <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<span style="float:right;"><a href="pdf/SIAM_AG21_poster_slides.pdf">Slides</a><!--/ <a href="">Video</a>--></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Contributed talk, submitted as poster)</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line poster due to the COVID-19)</div>
          </div>
 
          <br/><div class="cv">
          <div class="year"></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<span style="float:right;"><a href="pdf/SIAM_AG21_MS_compRAG_slides.pdf">Slides</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<span style="float:right;"><a href="pdf/SIAM_AG21_MS_compRAG_slides.pdf">Slides</a>/ <a href="https://www.youtube.com/watch?v=F1EMidO6su4">Video</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with C. Riener.</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
