--- a/cv_es.html
+++ b/cv_es.html
@@ -552,7 +552,7 @@
 
       <br/><div class="cv">
      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></div>
-       <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<span style="float:right;"><a href="pdf/SIAM_AG21_poster_slides.pdf">Slides</a><!--/ <a href="">Vídeo</a>--></span></div>
+       <div class="pretalktitle"></div><div class="talktitle">Breaking the Curse of Infinite Average Run-Time in Numerical Real Algebraic Geometry, can the Adaptive Grid Method do the Job?<span style="float:right;"><a href="pdf/SIAM_AG21_poster_slides.pdf">Slides</a>/ <a href="https://www.youtube.com/watch?v=lS7k9y5Qsag">Vídeo</a></span></div>
        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia contribuida, enviada como póster)</div>
        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
      </div>
